# TourbillonWatch

./: .gitignore  Makefile  docker-compose.yml
bot/: .gitignore  pyproject.toml
rest/: .dockerignore  .gitignore  README.md  pyproject.toml
rest/apps/base/: models.py
rest/apps/products/: models.py
rest/core/: settings.py
rest/src/apps/ui/: apps.py
web/: package-lock.json
