[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["fu7ur3gh057 <fu7ur3gh057@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
