[tool.poetry]
name = "rest"
version = "0.1.0"
description = ""
authors = ["fu7ur3gh057 <fu7ur3gh057@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.2"
django-ninja = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
